--- a/src/app/vote/vote.component.html
+++ b/src/app/vote/vote.component.html
@@ -1,13 +1,15 @@
 <h2>My Votes</h2>
 
-
 <ul class="heroes">
   <h3>Question : {{pollView.question}}</h3>
   <li *ngFor="let choice of pollView.choices">
-
-    <input type="radio" id="{{choice.choice}}" name="choice" [checked]="choice.choice === selected"
-           (change)="onItemChange(choice.choice)">
-    <label>{{choice.choice}}</label>
+    <a>
+      <span class="badge">
+          <input style="vertical-align: middle" type="radio" id="{{choice.choice}}" name="choice" [checked]="choice.choice === selected"
+                 (change)="onItemChange(choice.choice)"/>
+      </span>
+          {{choice.choice}}
+    </a>
   </li>
 
   <button class="button button2" (click)="voteClick()">Submit</button>
