--- a/src/app/vote/vote.component.html
+++ b/src/app/vote/vote.component.html
@@ -12,5 +12,5 @@
     </a>
   </li>
 
-  <button class="button button2" (click)="voteClick()">Submit</button>
+  <button routerLink="/result" class="button button2" (click)="voteClick()">Submit</button>
 </ul>
